--- a/styles.css
+++ b/styles.css
@@ -1,1 +1,37 @@
 /*  your css code here. If applicable */
+* {
+	background-color:rgb(135, 206, 235);
+}
+
+p:first-child {
+	background-color: black;
+	color:white;
+}
+p:nth-child(2) {
+	color: black;
+}
+
+p:nth-child(3) {
+	color: red;
+}
+
+ul:nth-child(1){
+	background-color: gray;
+}
+
+li {
+	/* background-color: gray;*/
+
+	width: 50%;
+	padding: 10px;
+	background-color: gray;
+}
+
+.first, .last{
+	/* background-color: gray; */
+	font-size: 22px;
+}
+
+.three, .last{
+	background-color: pink;
+}
